CIR-I4652 | CIR-I4602 | overlapping issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -3805,7 +3805,7 @@ body {
 
 .css-26l3qy-menu {
   font-size: 14px;
-  z-index: 100 !important;
+  z-index: 12 !important;
 }
 
 .costing-details-page,
@@ -8354,7 +8354,7 @@ body {
     right: 2px;
     top: 24%;
     min-height: 38px;
-    z-index: 10;
+    z-index: 1;
 
     .input-group-text {
       border-top-right-radius: 4px;
@@ -8364,6 +8364,10 @@ body {
         min-width: 24px;
       }
     }
+  }
+
+  .input-group>.form-control:focus {
+    z-index: 0;
   }
 }
 
